--- a/.github/workflows/New_update.yml
+++ b/.github/workflows/New_update.yml
@@ -1,4 +1,4 @@
-name: Develop Update Feature Flags Documentation
+name: New up Update Feature Flags Documentation
 
 on:
   schedule:
@@ -72,37 +72,28 @@ jobs:
               const fs = require('fs');
               const path = require('path');
               const featureFlagFilePath = path.resolve(__dirname, process.env.FEATURE_FLAG_FILE || 'FeatureFlags.tsx');
-              
-              if (!fs.existsSync(featureFlagFilePath)) {
-                console.error('FeatureFlags.tsx file not found.');
-                process.exit(1);
-              }
-      
               const content = fs.readFileSync(featureFlagFilePath, 'utf8');
-      
-              // Match for FeatureFlagMapping or enum FeatureFlag pattern
+
+              // Try to match FeatureFlagMapping or enum pattern
               const mappingMatch = content.match(/export const FeatureFlagMapping =\\s*{([\\s\\S]+?)}/);
               const enumMatch = content.match(/export enum FeatureFlag \\{([\\s\\S]+?)\\}/);
-      
+
               if (mappingMatch && mappingMatch[1]) {
-                // Extract values only (assumes values are strings in 'FeatureFlagMapping')
-                const values = mappingMatch[1]
-                  .split(',')
-                  .map(line => line.split(':')[1]?.trim().replace(/['",]/g, ''))
-                  .filter(value => value);
-                
-                values.forEach(value => {
-                  console.log(\`\${value}=\${value}\`);
-                });
+                // Extract values from FeatureFlagMapping object
+                const objectContent = '{' + mappingMatch[1].trim() + '}';
+                const FeatureFlagMapping = eval('(' + objectContent + ')');
+                for (const value of Object.values(FeatureFlagMapping)) {
+                  console.log(`\${value}=\${value}`);
+                }
               } else if (enumMatch && enumMatch[1]) {
                 // Extract values from enum (assumes values in 'FeatureFlag')
                 const values = enumMatch[1]
                   .split(',')
                   .map(flag => flag.trim().replace(/['"]/g, ''))
                   .filter(value => value);
-      
+                
                 values.forEach(value => {
-                  console.log(\`\${value}=\${value}\`);
+                  console.log(`\${value}=\${value}`);
                 });
               } else {
                 console.error('Neither FeatureFlagMapping object nor enum FeatureFlag found in FeatureFlags.tsx');
@@ -116,109 +107,244 @@ jobs:
           echo "Latest release flags extracted:"
           cat latest_release_flags.txt || echo "No flags extracted from latest release branch"
 
-
-      - name: Extract Feature Flags from Branches
-        id: extract-flags
+      - name: Extract Feature Flags from Previous Release Branch (if available)
+        id: extract-previous-release-flags
         run: |
-          extract_flags() {
-            branch=$1
-            output_file=$2
+          if [ -n "${{ steps.get-latest-release.outputs.previous_branch }}" ]; then
+            git checkout ${{ steps.get-latest-release.outputs.previous_branch }}
+            node -e "
+              const fs = require('fs');
+              const path = require('path');
+              const featureFlagFilePath = path.resolve(__dirname, process.env.FEATURE_FLAG_FILE || 'FeatureFlags.tsx');
+              const content = fs.readFileSync(featureFlagFilePath, 'utf8');
 
-            if [ -n "$branch" ]; then
-              git checkout $branch
-              node -e "
-                const fs = require('fs');
-                const path = require('path');
-                const featureFlagFilePath = path.resolve(__dirname, process.env.FEATURE_FLAG_FILE || 'FeatureFlags.tsx');
-                const content = fs.readFileSync(featureFlagFilePath, 'utf8');
-                const match = content.match(/(export const FeatureFlagMapping =\\s*{([\\s\\S]+?)}|export enum FeatureFlag {([\\s\\S]+?)})/);
-                
-                if (!match) {
-                  console.error('FeatureFlagMapping or FeatureFlag enum not found in FeatureFlags.tsx');
-                  process.exit(1);
+              // Try to match FeatureFlagMapping or enum pattern
+              const mappingMatch = content.match(/export const FeatureFlagMapping =\\s*{([\\s\\S]+?)}/);
+              const enumMatch = content.match(/export enum FeatureFlag \\{([\\s\\S]+?)\\}/);
+
+              if (mappingMatch && mappingMatch[1]) {
+                // Extract values from FeatureFlagMapping object
+                const objectContent = '{' + mappingMatch[1].trim() + '}';
+                const FeatureFlagMapping = eval('(' + objectContent + ')');
+                for (const value of Object.values(FeatureFlagMapping)) {
+                  console.log(`\${value}=\${value}`);
                 }
+              } else if (enumMatch && enumMatch[1]) {
+                // Extract values from enum (assumes values in 'FeatureFlag')
+                const values = enumMatch[1]
+                  .split(',')
+                  .map(flag => flag.trim().replace(/['"]/g, ''))
+                  .filter(value => value);
                 
-                const flagText = match[2] || match[3];
-                const flags = flagText.match(/'([^']+)'/g).map(flag => flag.replace(/'/g, ''));
-                flags.forEach(flag => console.log(flag));
-              " > $output_file
-            else
-              touch $output_file
-            fi
-          }
+                values.forEach(value => {
+                  console.log(`\${value}=\${value}`);
+                });
+              } else {
+                console.error('Neither FeatureFlagMapping object nor enum FeatureFlag found in FeatureFlags.tsx');
+                process.exit(1);
+              }
+            " > previous_release_flags.txt
+          else
+            echo "No previous release branch available. Skipping flag extraction."
+            touch previous_release_flags.txt
+          fi
+          echo "Previous release flags extracted:"
+          cat previous_release_flags.txt || echo "No flags extracted from previous release branch"
 
-          extract_flags "${{ steps.get-latest-release.outputs.latest_branch }}" latest_release_flags.txt
-          extract_flags "${{ steps.get-latest-release.outputs.previous_branch }}" previous_release_flags.txt
-          extract_flags "main" main_flags.txt
+      - name: Extract Feature Flags from Main Branch
+        id: extract-main-flags
+        run: |
+          git checkout main
+          node -e "
+            const fs = require('fs');
+            const path = require('path');
+            const featureFlagFilePath = path.resolve(__dirname, process.env.FEATURE_FLAG_FILE || 'FeatureFlags.tsx');
+            const content = fs.readFileSync(featureFlagFilePath, 'utf8');
 
-          echo "Flags extracted for each branch"
+            // Try to match FeatureFlagMapping or enum pattern
+            const mappingMatch = content.match(/export const FeatureFlagMapping =\\s*{([\\s\\S]+?)}/);
+            const enumMatch = content.match(/export enum FeatureFlag \\{([\\s\\S]+?)\\}/);
+
+            if (mappingMatch && mappingMatch[1]) {
+              // Extract values from FeatureFlagMapping object
+              const objectContent = '{' + mappingMatch[1].trim() + '}';
+              const FeatureFlagMapping = eval('(' + objectContent + ')');
+              for (const value of Object.values(FeatureFlagMapping)) {
+                console.log(`\${value}=\${value}`);
+              }
+            } else if (enumMatch && enumMatch[1]) {
+              // Extract values from enum (assumes values in 'FeatureFlag')
+              const values = enumMatch[1]
+                .split(',')
+                .map(flag => flag.trim().replace(/['"]/g, ''))
+                .filter(value => value);
+              
+              values.forEach(value => {
+                console.log(`\${value}=\${value}`);
+              });
+            } else {
+              console.error('Neither FeatureFlagMapping object nor enum FeatureFlag found in FeatureFlags.tsx');
+              process.exit(1);
+            }
+          " > main_flags.txt
+          echo "Main branch flags extracted:"
+          cat main_flags.txt || echo "No flags extracted from main branch"
 
       - name: Generate Comparison Markdown
         run: |
-          # Read flags into arrays
-          latest_release_flags=($(cat latest_release_flags.txt))
-          previous_release_flags=($(cat previous_release_flags.txt))
-          main_flags=($(cat main_flags.txt))
+          # Initialize associative arrays for release, previous release, and main flags
+          declare -A latest_release_flags previous_release_flags main_flags
 
-          # Define function to generate Markdown tables
-          generate_section() {
-            echo "## $1" >> ${{ env.FEATURE_FLAGS_DOC }}
-            echo "| Status | Flag |" >> ${{ env.FEATURE_FLAGS_DOC }}
-            echo "|--------|------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+          # Populate arrays with extracted flags
+          while IFS='=' read -r key value; do
+            latest_release_flags["$key"]="$value"
+          done < latest_release_flags.txt
+
+          while IFS='=' read -r key value; do
+            previous_release_flags["$key"]="$value"
+          done < previous_release_flags.txt
+
+          while IFS='=' read -r key value; do
+            main_flags["$key"]="$value"
+          done < main_flags.txt
+
+          # Begin Markdown content
+          echo "# Feature Flags Documentation" > ${{ env.FEATURE_FLAGS_DOC }}
+          echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
+
+          latest_branch="${{ steps.get-latest-release.outputs.latest_branch }}"
+          previous_branch="${{ steps.get-latest-release.outputs.previous_branch }}"
+
+           # Function to print standalone feature flags for each branch
+          print_standalone_flags() {
+              local -n flags=$1
+              local branch_name=$2
+
+              echo "## Feature Flags in \`$branch_name\`" >> ${{ env.FEATURE_FLAGS_DOC }}
+              echo "| Count | $branch_name Value |" >> ${{ env.FEATURE_FLAGS_DOC }}
+              echo "|-------|---------------------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+
+              count=1
+              for key in "${!flags[@]}"; do
+                echo "| $count | \`${flags[$key]}\` |" >> ${{ env.FEATURE_FLAGS_DOC }}
+                ((count++))
+              done
+              echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
           }
 
+          # Function to create summary table with New, Updated, and Deleted flags
           generate_summary_table() {
-              local -a latest_flags=("${!1}")
-              local -a previous_flags=("${!2}")
+              local -n latest_flags=$1
+              local -n previous_flags=$2
               local latest_branch=$3
               local previous_branch=$4
               local section_title=$5
 
               echo "## $section_title (New, Updated, Deleted Flags)" >> ${{ env.FEATURE_FLAGS_DOC }}
 
-              new_flags=()
-              updated_flags=()
-              deleted_flags=()
+              new_changes=()
+              updated_changes=()
+              deleted_changes=()
 
               # Identify new, updated, and deleted flags
-              for flag in "${latest_flags[@]}"; do
-                if [[ ! " ${previous_flags[@]} " =~ " ${flag} " ]]; then
-                  new_flags+=("| New 🔵 | \`${flag}\` |")
+              for key in "${!latest_flags[@]}"; do
+                latest_value="${latest_flags[$key]}"
+                previous_value="${previous_flags[$key]:-N/A}"
+
+                if [[ "$previous_value" == "N/A" ]]; then
+                  new_changes+=("| \`$latest_value\` | N/A | New 🔵 |")
+                elif [[ "$latest_value" != "$previous_value" ]]; then
+                  updated_changes+=("| \`$latest_value\` | \`$previous_value\` | Updated 🟡 |")
                 fi
               done
 
-              for flag in "${previous_flags[@]}"; do
-                if [[ ! " ${latest_flags[@]} " =~ " ${flag} " ]]; then
-                  deleted_flags+=("| Deleted 🔴 | \`${flag}\` |")
+              for key in "${!previous_flags[@]}"; do
+                if [[ -z "${latest_flags[$key]}" ]]; then
+                  deleted_changes+=("| N/A | \`${previous_flags[$key]}\` | Deleted 🔴 |")
                 fi
               done
 
               # Output New, Updated, and Deleted tables with a message if no differences
-              if [ ${#new_flags[@]} -gt 0 ]; then
-                generate_section "New Flags"
-                printf "%s\n" "${new_flags[@]}" >> ${{ env.FEATURE_FLAGS_DOC }}
+              if [ ${#new_changes[@]} -gt 0 ]; then
+                echo "### New Flags" >> ${{ env.FEATURE_FLAGS_DOC }}
+                echo "| $latest_branch Value | $previous_branch Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
+                echo "|----------------------|------------------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+                printf "%s\n" "${new_changes[@]}" >> ${{ env.FEATURE_FLAGS_DOC }}
               else
                 echo "### New Flags" >> ${{ env.FEATURE_FLAGS_DOC }}
                 echo "| No differences found |" >> ${{ env.FEATURE_FLAGS_DOC }}
               fi
 
-              if [ ${#deleted_flags[@]} -gt 0 ]; then
-                generate_section "Deleted Flags"
-                printf "%s\n" "${deleted_flags[@]}" >> ${{ env.FEATURE_FLAGS_DOC }}
+              if [ ${#updated_changes[@]} -gt 0 ]; then
+                echo "### Updated Flags" >> ${{ env.FEATURE_FLAGS_DOC }}
+                echo "| $latest_branch Value | $previous_branch Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
+                echo "|----------------------|------------------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+                printf "%s\n" "${updated_changes[@]}" >> ${{ env.FEATURE_FLAGS_DOC }}
+              else
+                echo "### Updated Flags" >> ${{ env.FEATURE_FLAGS_DOC }}
+                echo "| No differences found |" >> ${{ env.FEATURE_FLAGS_DOC }}
+              fi
+
+              if [ ${#deleted_changes[@]} -gt 0 ]; then
+                echo "### Deleted Flags" >> ${{ env.FEATURE_FLAGS_DOC }}
+                echo "| $latest_branch Value | $previous_branch Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
+                echo "|----------------------|------------------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+                printf "%s\n" "${deleted_changes[@]}" >> ${{ env.FEATURE_FLAGS_DOC }}
               else
                 echo "### Deleted Flags" >> ${{ env.FEATURE_FLAGS_DOC }}
                 echo "| No differences found |" >> ${{ env.FEATURE_FLAGS_DOC }}
               fi
           }
 
+          # Function to create full comparison table
+          generate_full_comparison_table() {
+              local -n latest_flags=$1
+              local -n previous_flags=$2
+              local latest_branch=$3
+              local previous_branch=$4
+              local section_title=$5
+
+              echo "### $section_title (Full Comparison)" >> ${{ env.FEATURE_FLAGS_DOC }}
+              echo "| $latest_branch Value | $previous_branch Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
+              echo "|----------------------|------------------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+
+              for key in "${!latest_flags[@]}"; do
+                latest_value="${latest_flags[$key]}"
+                previous_value="${previous_flags[$key]:-N/A}"
+                status=""
+
+                if [[ "$previous_value" == "N/A" ]]; then
+                  status="New 🔵"
+                elif [[ "$latest_value" != "$previous_value" ]]; then
+                  status="Updated 🟡"
+                else
+                  status="Unchanged ⚪"
+                fi
+
+                echo "| \`$latest_value\` | \`$previous_value\` | $status |" >> ${{ env.FEATURE_FLAGS_DOC }}
+              done
+
+              for key in "${!previous_flags[@]}"; do
+                if [[ -z "${latest_flags[$key]}" ]]; then
+                  echo "| N/A | \`${previous_flags[$key]}\` | Deleted 🔴 |" >> ${{ env.FEATURE_FLAGS_DOC }}
+                fi
+              done
+              echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
+          }
+
           # Generate summary and full comparison tables in requested order
-          if [ -n "${{ steps.get-latest-release.outputs.latest_branch }}" ] && [ -n "${{ steps.get-latest-release.outputs.previous_branch }}" ]; then
-            generate_summary_table latest_release_flags[@] previous_release_flags[@] "Latest" "Previous" "Latest vs. Previous Comparison"
-            generate_summary_table main_flags[@] latest_release_flags[@] "Main" "Latest" "Main vs. Latest Comparison"
+          if [ -n "$latest_branch" ] && [ -n "$previous_branch" ]; then
+            generate_summary_table latest_release_flags previous_release_flags "$latest_branch" "$previous_branch" "Comparison: $latest_branch vs. $previous_branch"
+            generate_summary_table main_flags latest_release_flags "main" "$latest_branch" "Comparison: main vs. $latest_branch"
+            print_standalone_flags latest_release_flags "$latest_branch"
+            generate_full_comparison_table latest_release_flags previous_release_flags "$latest_branch" "$previous_branch" "Full Comparison: $latest_branch vs. $previous_branch"
+            print_standalone_flags main_flags "main"
+            generate_full_comparison_table main_flags latest_release_flags "main" "$latest_branch" "Full Comparison: main vs. $latest_branch"
           fi
 
-          echo "Generated FEATURE_FLAGS.md content:"
-          cat ${{ env.FEATURE_FLAGS_DOC }}
+      - name: Cleanup Temporary Files
+        run: |
+          rm -f main_flags.txt latest_release_flags.txt previous_release_flags.txt
 
       - name: Commit and Push Changes
         run: |
@@ -230,6 +356,16 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          
+      - name: Set up Git
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+    
       - name: Clone the Wiki
         run: |
           git clone https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/rohit11/MyTripList.wiki.git wiki
